[gd_scene load_steps=5 format=3 uid="uid://fbuchayokqri"]

[ext_resource type="Script" path="res://menu/main/menu_main.gd" id="1_8tkp3"]
[ext_resource type="Texture2D" uid="uid://cjqc3bbyxf0ii" path="res://menu/main/res/Placeholder_Background.png" id="2_cer0w"]
[ext_resource type="SystemFont" uid="uid://u40xu32e5s2f" path="res://menu/menu-font.tres" id="3_ejmu5"]
[ext_resource type="PackedScene" uid="uid://bq7fpctxbxuhm" path="res://menu/options/menu_options.tscn" id="4_c4eab"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8tkp3")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_cer0w")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 24
theme_override_fonts/font = ExtResource("3_ejmu5")
theme_override_font_sizes/font_size = 60
text = "Untitled Party Game"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Button_Start" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_ejmu5")
text = "Start"

[node name="Button_Options" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_ejmu5")
text = "Options"

[node name="Button_Exit" type="Button" parent="MarginContainer/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(120, 32)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_ejmu5")
text = "Exit"

[node name="Options" parent="." instance=ExtResource("4_c4eab")]
visible = false
layout_mode = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Button_Start" to="." method="_on_button_start_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Button_Options" to="." method="_on_button_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Buttons/Button_Exit" to="." method="_on_button_exit_pressed"]
